# qrencode-gtk

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  qrencode-gtk
data/: Makefile.am  qrencode-gtk.desktop
data/icons/: Makefile.am
qrgtk/: __init__.py  app.py  defs.py.in  encoder.py  textentry.py  window.py
